fixed issues with convy overflow

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -10,6 +10,7 @@ body{background-color:#F1F1F1;color:#303136;font-family:'Open Sans',sans-serif}.
   font-size: 3em;
 }
 .hero_project_img{ 
+  overflow: hidden;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -239,7 +240,7 @@ input:-webkit-autofill {
 
 .convy_bg {
   background-image: linear-gradient(to right,#00dde0 0 ,#321c52 100%);
-    height: 100vh;
+    height: 80vh;
     color:#fff;
     position: fixed;
     top: 0;
@@ -255,7 +256,7 @@ input:-webkit-autofill {
 
 .kelisto_bg {
   background-color: #844a85;
-    height: 100vh;
+  height: 80vh;
     color:#fff;
     position: fixed;
     top: 0;
@@ -278,7 +279,7 @@ input:-webkit-autofill {
 
 .meka_bg {
   background: linear-gradient(to right, rgba(255,97,110,1) 0%, rgba(255,193,113,1) 100%);
-    height: 100vh;
+  height: 80vh;
     color:#fff;
     position: fixed;
     top: 0;
@@ -294,7 +295,7 @@ input:-webkit-autofill {
 
 .sharemos_bg {
   background-color:#e86575;
-    height: 100vh;
+  height: 80vh;
     color:#fff;
     position: fixed;
     top: 0;
@@ -401,6 +402,8 @@ font-size: 5em;
 
 .phone_container {
     position: relative;
+    overflow: hidden;
+    width: 100%;
 }
 
 .phone_container2 {
@@ -886,7 +889,6 @@ opacity: 0.8;
 
 .Header {
   transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1.0);
-  padding: 1px 0;
 }
 
 .HeaderScrolled {
@@ -901,16 +903,16 @@ opacity: 0.8;
   display:block;
   position:fixed;
   z-index:9999;
-  font-size: 0.9em;
-  line-height: 3em;
+  font-size: 1em;
+  line-height: 3.3em;
   background:#fff;
-  height: 40px;
+  height: 55px;
   width:100%;
   bottom:0;
   text-align:center;
-  -webkit-box-shadow: 0px -4px 10px 0px rgba(252,252,252,1);
-  -moz-box-shadow: 0px -4px 10px 0px rgba(252,252,252,1);
-  box-shadow: 0px -4px 10px 0px rgba(252,252,252,1);
+  -webkit-box-shadow: 0px 0px 1px 0px rgba(241,241,241,1);
+-moz-box-shadow: 0px 0px 1px 0px rgba(241,241,241,1);
+box-shadow: 0px 0px 1px 0px rgba(241,241,241,1);
 }
 @media screen and (min-width:59.9375em){ 
   .bottom-navbar{display:none;}
